--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
     <section class="gallery-section">
       <label for="preview" class="gallery-label">Gallery</label>
       <div id="meme-gallery" class="meme-gallery"></div>
+      <div class="attribution">
+        Coded by <a href="https://github.com/scionine/">Simeon Elias </a>[2025].
+      </div>
     </section>
   </body>
 </html>
